--- a/nginx/quickstart.conf
+++ b/nginx/quickstart.conf
@@ -7,7 +7,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
     location /api {
-        proxy_pass http://python:8000;
+        proxy_pass http://server:8000;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
