--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
-  "proxy": "http://python:8000",
+  "proxy": "http://server:8000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
