--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,22 +9,31 @@ x-environment:
   PLAID_ENV: ${PLAID_ENV}
   REACT_APP_API_HOST: ${REACT_APP_API_HOST}
 services:
+  fluentbit:
+    container_name: fluentbit
+    image: fluent/fluent-bit:1.9.0
+    build:
+      context: ./fluent-bit
+    networks:
+      - quickstart
+    ports: ["24224:24224"]
   server:
     container_name: server
     networks:
       - quickstart
     depends_on:
       - frontend
+      - fluentbit
     build:
       context: .
       dockerfile: ./python/Dockerfile
     ports: ["8000:8000"]
     environment:
       <<: *QUICKSTART_ENVIRONMENT
-    logging:
-      driver: "fluentd"
-      options:
-        fluentd-address: localhost:24224
+        #    logging:
+        #      driver: "fluentd"
+        #      options:
+        #        fluentd-address: fluent-bit:24224
   frontend:
     image: sanlimag/cs-fintech-frontend:1.0
     environment:
@@ -32,6 +41,8 @@ services:
     networks:
       - quickstart
     ports: ["3000:3000"]
+    depends_on:
+      - fluentbit
   nginx:
     container_name: nginx
     restart: always
@@ -42,6 +53,10 @@ services:
       - ./nginx:/etc/nginx/conf.d
     networks:
       - quickstart
+    depends_on:
+      - fluentbit
+      - server
+      - frontend
 networks:
   quickstart:
     name: quickstart
