--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -20,7 +20,7 @@
     # - trace
     #
     # by default 'info' is set, that means it includes 'error' and 'warning'.
-    log_level    debug
+    log_level    info
 
     # Parsers File
     # ============
@@ -98,6 +98,9 @@
 [OUTPUT]
     name  stdout
     match *
+    format json_stream
+    json_date_key timestamp
+    json_date_format iso8601
 
 #[OUTPUT]
 #    Name s3
