--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -95,19 +95,19 @@
 #    delivery_stream cs-fintech-demo-stream
 #    workers 1
 
-[OUTPUT]
-    name  stdout
-    match *
-    format json_stream
-    json_date_key timestamp
-    json_date_format iso8601
-
 #[OUTPUT]
-#    Name s3
-#    Match *
-#    bucket chaos-fintech-app-logs
-#    region us-east-1
-#    json_date_key false
-#    total_file_size 1M
-#    upload_timeout 1m
-#    use_put_object On
+#    name  stdout
+#    match *
+#    format json_stream
+#    json_date_key timestamp
+#    json_date_format iso8601
+
+[OUTPUT]
+    Name s3
+    Match *
+    bucket chaos-fintech-app-logs
+    region us-east-1
+    json_date_key timestamp
+    total_file_size 1M
+    upload_timeout 1m
+    use_put_object On
