set frontend container name and python server log to stdout

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     logging:
       driver: "fluentd"
   frontend:
+    container_name: frontend
     image: sanlimag/cs-fintech-frontend:1.0
     environment:
       <<: *QUICKSTART_ENVIRONMENT
