--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,7 @@ http {
 
     log_format json_combined escape=json
       '{'
-        '"timestamp":"$time_local",'
+        '"time_local":"$time_local",'
         '"remote_addr":"$remote_addr",'
         '"remote_user":"$remote_user",'
         '"request":"$request",'
