v2 added fields to fluent-bit output

--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -88,6 +88,12 @@
     Buffer_Chunk_Size 1M
     Buffer_Max_Size   6M
 
+[FILTER]
+    Name modify
+    Match *
+    Add app fintech
+    Add environment dev
+
 #[OUTPUT]
 #    Name kinesis_firehose
 #    Match   *
