v2 log fixes on server.py and filter section added to fluent-bit.conf

--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -91,7 +91,7 @@
 [FILTER]
     Name modify
     Match *
-    Add app fintech
+    Add application name=>fintech,version=>2.0
     Add environment dev
 
 #[OUTPUT]
