--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,10 +5,12 @@ server {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Request-Id $request_id;
     }
     location /api {
         proxy_pass http://server:8000;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Request-Id $request_id;
     }
 }
