--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,7 +28,7 @@ http {
         '"http_user_agent":"$http_user_agent"'
       '}';
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    log_format  main  '"$request_id" $remote_addr $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for" "$request_id" ';
 
