--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,7 +30,7 @@ http {
 
     log_format  main  '"$request_id" $remote_addr $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for" "$request_id" ';
+                      '"$http_user_agent" "$http_x_forwarded_for" ';
 
     access_log  /var/log/nginx/access.log  main;
 
