v2 additional log fields

--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -91,8 +91,10 @@
 [FILTER]
     Name modify
     Match *
-    Add application name=>fintech,version=>2.0
-    Add environment dev
+    Add application_name fintech
+    Add application_version 2.0
+    Add environment prod1
+    Add region us-east-1
 
 #[OUTPUT]
 #    Name kinesis_firehose
