v1 splitting fluentbit outputs by container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       <<: *QUICKSTART_ENVIRONMENT
     logging:
       driver: "fluentd"
+      options:
+        tag: server
   frontend:
     container_name: frontend
     image: sanlimag/cs-fintech-frontend:1.0
@@ -49,6 +51,8 @@ services:
       - fluentbit
     logging:
       driver: "fluentd"
+      options:
+        tag: frontend
   nginx:
     container_name: nginx
     build:
@@ -63,6 +67,8 @@ services:
       - frontend
     logging:
       driver: "fluentd"
+      options:
+        tag: nginx
 networks:
   quickstart:
     name: quickstart
