--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -88,6 +88,12 @@
     Buffer_Chunk_Size 1M
     Buffer_Max_Size   6M
 
+[FILTER]
+    Name modify
+    Match *
+    Add application_name fintech
+    Add application_version 1.0
+
 #[OUTPUT]
 #    Name kinesis_firehose
 #    Match   *
@@ -104,8 +110,31 @@
 
 [OUTPUT]
     Name s3
-    Match *
+    Match server
     bucket chaos-fintech-app-logs
+    s3_key_format /fluent-bit-logs/$TAG/%Y/%m/%d/%H/%M/%S
+    region us-east-1
+    json_date_key timestamp
+    total_file_size 1M
+    upload_timeout 1m
+    use_put_object On
+
+[OUTPUT]
+    Name s3
+    Match frontend
+    bucket chaos-fintech-app-logs
+    s3_key_format /fluent-bit-logs/$TAG/%Y/%m/%d/%H/%M/%S
+    region us-east-1
+    json_date_key timestamp
+    total_file_size 1M
+    upload_timeout 1m
+    use_put_object On
+
+[OUTPUT]
+    Name s3
+    Match nginx
+    bucket chaos-fintech-app-logs
+    s3_key_format /fluent-bit-logs/$TAG/%Y/%m/%d/%H/%M/%S
     region us-east-1
     json_date_key timestamp
     total_file_size 1M
