v2 splitting fluentbit outputs by container

--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -92,7 +92,7 @@
     Name modify
     Match *
     Add application_name fintech
-    Add application_version 2.0
+    Add application_version v2
     Add environment prod1
     Add region us-east-1
 
@@ -112,8 +112,31 @@
 
 [OUTPUT]
     Name s3
-    Match *
+    Match server
     bucket chaos-fintech-app-logs
+    s3_key_format /fluent-bit-logs/server/%Y/%m/%d/%H/%M/%S
+    region us-east-1
+    json_date_key timestamp
+    total_file_size 1M
+    upload_timeout 1m
+    use_put_object On
+
+[OUTPUT]
+    Name s3
+    Match frontend
+    bucket chaos-fintech-app-logs
+    s3_key_format /fluent-bit-logs/frontend/%Y/%m/%d/%H/%M/%S
+    region us-east-1
+    json_date_key timestamp
+    total_file_size 1M
+    upload_timeout 1m
+    use_put_object On
+
+[OUTPUT]
+    Name s3
+    Match nginx
+    bucket chaos-fintech-app-logs
+    s3_key_format /fluent-bit-logs/nginx/%Y/%m/%d/%H/%M/%S
     region us-east-1
     json_date_key timestamp
     total_file_size 1M
