--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,9 +28,9 @@ http {
         '"http_user_agent":"$http_user_agent"'
       '}';
 
-    log_format  main  '"$request_id" $remote_addr $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for" ';
+    log_format  main  '$request_id $remote_addr $remote_user [$time_local] $request '
+                      '$status $body_bytes_sent $http_referer '
+                      '$http_user_agent $http_x_forwarded_for ';
 
     access_log  /var/log/nginx/access.log  main;
 
