--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -114,7 +114,7 @@
     Name s3
     Match server
     bucket chaos-fintech-app-logs
-    s3_key_format /fluent-bit-logs/server/%Y/%m/%d/%H/%M/%S
+    s3_key_format /fluentbit/server/%Y/%m/%d/%H/%M/%S
     region us-east-1
     json_date_key timestamp
     total_file_size 1M
@@ -125,7 +125,7 @@
     Name s3
     Match frontend
     bucket chaos-fintech-app-logs
-    s3_key_format /fluent-bit-logs/frontend/%Y/%m/%d/%H/%M/%S
+    s3_key_format /fluentbit/frontend/%Y/%m/%d/%H/%M/%S
     region us-east-1
     json_date_key timestamp
     total_file_size 1M
@@ -136,7 +136,7 @@
     Name s3
     Match nginx
     bucket chaos-fintech-app-logs
-    s3_key_format /fluent-bit-logs/nginx/%Y/%m/%d/%H/%M/%S
+    s3_key_format /fluentbit/nginx/%Y/%m/%d/%H/%M/%S
     region us-east-1
     json_date_key timestamp
     total_file_size 1M
