v2 add log fields to fluentbit

--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -93,8 +93,13 @@
     Match *
     Add application_name fintech
     Add application_version v2
+    Add application_revision 06459
     Add environment prod1
-    Add region us-east-1
+    Add region us-east
+    Add cluster 1a
+    Add service_role master
+    Add api_version 3
+    Add api_revision 9580
 
 #[OUTPUT]
 #    Name kinesis_firehose
