--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -92,7 +92,7 @@
     Name modify
     Match *
     Add application_name fintech
-    Add application_version v2
+    Add application_version 2.0
     Add application_revision 06459
     Add environment prod1
     Add region us-east
